fix gallery grid vertical alignment

--- a/themes/fonorobert.com-theme/assets/css/lightbox.css
+++ b/themes/fonorobert.com-theme/assets/css/lightbox.css
@@ -5,7 +5,7 @@
   max-width: 100%;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: baseline;
 }
 
 .gallery figure {
@@ -41,13 +41,13 @@
 }
 
 .lightbox:target {
-  align-items: center;
-  bottom: 0;
   display: flex;
   justify-content: center;
+  align-items: center;
   left: 0;
   right: 0;
   top: 0;
+  bottom: 0;
 }
 
 .lightbox img {
